--- a/content/10-effective-practice-when-working-children-kinship-care.html
+++ b/content/10-effective-practice-when-working-children-kinship-care.html
@@ -135,10 +135,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -147,7 +147,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
