--- a/content/care-information.html
+++ b/content/care-information.html
@@ -69,9 +69,9 @@
     					    <h1 id="page-title" >Care information</h1>    					              				</div><!-- #page-headline -->
 															<div id="node-73" class="node  node-book clear-block">
   <div class="content clear-block">
-            <p>Research from the Picker Institute into accessing information about health and social care services (<a href="http://www.pickereurope.org/assets/content/pdf/Project_Reports/Information_access_final_web.pdf">Swain et al, 2007</a>) found that all respondents had, at some point, tried to find out about services available in their local area, such as local general practitioners, dentists and specialist health, social care or voluntary sector services. Most wanted at least basic details in the form of contact names, addresses and telephone numbers, and opening times.</p>
+            <p>Research from the Picker Institute into accessing information about health and social care services (<a href="https://www.pickereurope.org/assets/content/pdf/Project_Reports/Information_access_final_web.pdf">Swain et al, 2007</a>) found that all respondents had, at some point, tried to find out about services available in their local area, such as local general practitioners, dentists and specialist health, social care or voluntary sector services. Most wanted at least basic details in the form of contact names, addresses and telephone numbers, and opening times.</p>
 <p>According to the research there was no shortage of information, but the lack of signposting made it hard to find: professionals at the first point of contact did not systematically or proactively provide information about accessing local services; and there was a lack of co-ordination between information providers across boundaries and confusion about responsibility for providing information about the range of services available.</p>
-<p>More recent research from the Institute for Public Policy at Oxford Brookes University (2011) and <a href="http://www.thinklocalactpersonal.org.uk/Browse/Self-funders/index.cfm?parent=8609&amp;child=8647">Melanie Henwood Associates</a> (2011) suggests that the situation has not changed since 2007.</p>
+<p>More recent research from the Institute for Public Policy at Oxford Brookes University (2011) and <a href="https://www.thinklocalactpersonal.org.uk/Browse/Self-funders/index.cfm?parent=8609&amp;child=8647">Melanie Henwood Associates</a> (2011) suggests that the situation has not changed since 2007.</p>
 <blockquote><p>Time and again, people described the struggle to obtain information, advice or advocacy to help them in making life-changing decisions.</p>
 </blockquote>
 <p>It is clear that the internet has changed the way many people find information and communicate with each other. However, if signposting is a problem, what is the solution? In the next sections, central and local government initiatives are examined, followed by a survey of a variety of &#39;bottom-up&#39; or community led initiatives that seek to harness the power of the internet.</p>
@@ -135,10 +135,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -147,7 +147,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
