--- a/content/community-initiatives.html
+++ b/content/community-initiatives.html
@@ -71,46 +71,46 @@
   <div class="content clear-block">
             <p>Web technologies have enabled communities to share information, advice and support, thereby increasing neighbourhood social capital, developing new social relationships and networks and engaging socially excluded groups.</p>
 <h3>
-	<a href="http://networkedneighbourhoods.com/?page_id=231">Haringey Neighbourhoods Connect</a></h3>
+	<a href="https://networkedneighbourhoods.com/?page_id=231">Haringey Neighbourhoods Connect</a></h3>
 <p>This project aims to improve the quality of life of older people and reduce the cost of care to public service organisations by supporting older people to live independently in their communities with lowered reliance on public services. The project plans to use a blend of social media, online tools and real world interactions to stimulate informal support of older people through active neighbouring.</p>
 <p>The project has a particular focus on micro-volunteering, mediated by the community with the support of the local council and Age Concern. The aim is to make it easy for local people to give small slices of time in their neighbourhood when they can, rather than needing to commit to more formal volunteer programmes. Reciprocity is also a key feature of Neighbourhoods Connect. The project is designed to encourage older people to contribute their skills and experience to their community as well as receiving support.</p>
 <ul>
 <li>
-		Web <a href="http://networkedneighbourhoods.com/?page_id=231">http://networkedneighbourhoods.com/?page_id=231</a></li>
+		Web <a href="https://networkedneighbourhoods.com/?page_id=231">https://networkedneighbourhoods.com/?page_id=231</a></li>
 </ul>
 <h3>
-	<a href="http://openlylocal.com/">Openly Local</a></h3>
-<p>An initiative that provides details of councils, councillors, public spending and hyperlocal websites (websites focused on a well defined, community scale area). While there is no specific information about social care provision, information is available about the amounts being spent on care and the suppliers of adult services. There are currently 466 <a href="http://openlylocal.com/hyperlocal_sites">hyperlocal websites</a> listed.</p>
+	<a href="https://openlylocal.com/">Openly Local</a></h3>
+<p>An initiative that provides details of councils, councillors, public spending and hyperlocal websites (websites focused on a well defined, community scale area). While there is no specific information about social care provision, information is available about the amounts being spent on care and the suppliers of adult services. There are currently 466 <a href="https://openlylocal.com/hyperlocal_sites">hyperlocal websites</a> listed.</p>
 <ul>
 <li>
-		Web <a href="http://openlylocal.com/">http://openlylocal.com</a>/ <a href="http://openlylocal.com/hyperlocal_sites">http://openlylocal.com/hyperlocal_sites</a></li>
+		Web <a href="https://openlylocal.com/">https://openlylocal.com</a>/ <a href="https://openlylocal.com/hyperlocal_sites">https://openlylocal.com/hyperlocal_sites</a></li>
 </ul>
-<h3><a href="http://networkedneighbourhoods.com/">Networked Neighbourhoods</a></h3>
+<h3><a href="https://networkedneighbourhoods.com/">Networked Neighbourhoods</a></h3>
 <p>The Online Neighbourhood Networks Study (2010) explored the ways in which people communicate online using local citizen-run websites, the impact of that communication, and the implications for local service providers. The research showed that networked neighbourhoods enhance the sense of belonging, democratic influence, neighbourliness and involvement in their area.</p>
 <ul>
 <li>
-		Web <a href="http://networkedneighbourhoods.com/">http://networkedneighbourhoods.com/</a></li>
+		Web <a href="https://networkedneighbourhoods.com/">https://networkedneighbourhoods.com/</a></li>
 </ul>
 <h3>
-	<a href="http://www.bowesandbounds.org/">Bowes and Bounds Connected</a></h3>
+	<a href="https://www.bowesandbounds.org/">Bowes and Bounds Connected</a></h3>
 <p>This project targets two age groups: over 75s who are registered with a local GP but who are not using services and may not be claiming all the benefits to which they are entitled; and over 65s who will be given help and information about their own personal care arrangements.</p>
 <ul>
 <li>
-		Web <a href="http://www.bowesandbounds.org/">http://www.bowesandbounds.org/</a></li>
+		Web <a href="https://www.bowesandbounds.org/">https://www.bowesandbounds.org/</a></li>
 </ul>
 <h3>
-	<a href="http://www.yoursquaremile.co.uk/">Your Square Mile</a></h3>
+	<a href="https://www.yoursquaremile.co.uk/">Your Square Mile</a></h3>
 <p>This service is due to launch in late summer 2011. Initially it sets out to match people&#39;s interests, skills and experiences with local projects that need support. A second stage will launch as a mutual &quot;Union for Citizens&quot; offering benefits such as: reduced Public Liability Insurance and Criminal Records Bureau (CRB) checks. Also planned is a local giving platform to donate and receive time, money and resources to and from the local community.</p>
 <ul>
 <li>
-		Web&nbsp;<a href="http://www.yoursquaremile.co.uk/">http://www.yoursquaremile.co.uk/</a></li>
+		Web&nbsp;<a href="https://www.yoursquaremile.co.uk/">https://www.yoursquaremile.co.uk/</a></li>
 </ul>
 <h3>
-	<a href="http://www.dotcomunity.co.uk">DotComUnity</a></h3>
+	<a href="https://www.dotcomunity.co.uk">DotComUnity</a></h3>
 <p>This is a not-for-profit directory of community services and care information. It allows users to locate what is available in their area and to review and rate their experiences with the listed organisations. It is free for both users and organisations and is funded through advertising and sponsorship. The directory includes support services, employment, legal matters, finance, sports and social activities. A members&#39; area allows events and services to be reviewed and scored using a star-rating system. Over 59,000 events and activities are currently listed across the UK.</p>
 <ul>
 <li>
-		Web <a href="http://www.dotcomunity.co.uk/">www.dotcomunity.co.uk</a></li>
+		Web <a href="https://www.dotcomunity.co.uk/">www.dotcomunity.co.uk</a></li>
 </ul>
   <div id="book-navigation-65" class="book-navigation">
     
@@ -165,10 +165,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -177,7 +177,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
