--- a/content/digital-engagement.html
+++ b/content/digital-engagement.html
@@ -69,9 +69,9 @@
 															<div id="node-65" class="node  node-book clear-block">
   <div class="content clear-block">
             <p>A report for IRISS by Shirley Ayres, Aspire Knowledge</p>
-<p><a href="http://www.iriss.org.uk/">Institute for Research and Innovation in Social Services</a> (IRISS) is a charitable company with a mission to promote positive outcomes for the people who use Scotland&#39;s social services by enhancing the capacity and capability of the social services workforce to access and make use of knowledge &amp; research for service innovation &amp; improvement.</p>
+<p><a href="https://www.iriss.org.uk/">Institute for Research and Innovation in Social Services</a> (IRISS) is a charitable company with a mission to promote positive outcomes for the people who use Scotland&#39;s social services by enhancing the capacity and capability of the social services workforce to access and make use of knowledge &amp; research for service innovation &amp; improvement.</p>
 <p>Aspire Knowledge collaborates on ideas, projects and products in knowledge to the third and public sector. Our style of delivery is through collaboration with partners on great ideas - we don't own everything we do, even if it starts as our idea - what is important to us is that good ideas for knowledge flourish, wherever that idea begins.</p>
-<p><a href="http://www.iriss.org.uk/resources/future-personalisation">This</a><a href="http://www.iriss.org.uk/resources/future-personalisation"> report on The future for personalisation</a> is also available in PDF.</p>
+<p><a href="https://www.iriss.org.uk/resources/future-personalisation">This</a><a href="https://www.iriss.org.uk/resources/future-personalisation"> report on The future for personalisation</a> is also available in PDF.</p>
 <p>Follow the discussion on Twitter&nbsp;<a href="https://twitter.com/search?q=%23deukcare">#deukcare</a></p>
   <div id="book-navigation-65" class="book-navigation">
     <ul class="menu"><li class="collapsed first"><a href="introduction.html">Introduction</a></li>
@@ -106,7 +106,7 @@ We are using the hashtag #deukcare to promote discussion on Twitter. There has b
 <div class="comment comment-published even commenter-logged-in original-author clear-block">
   <div class="content clear-block">
     ﻿<div class="user-picture">
-<img src="../sites/default/files/imagecache/user_image_small/themes/comment/images/icn-user-default.png" alt="ContentAdmin&#039;s picture" title="ContentAdmin&#039;s picture" width="42" height="42" class="imagecache imagecache-user_image_small"/></div>        <h3><a href="digital-engagement.html#comment-17" title="Permanent link to this comment." class="active">Twitter and Facebook</a></h3>    <p>Very happy to promote discussion wherever we can.  We have a Facebook page <a href="http://www.facebook.com/pages/Institute-for-Research-and-Innovation-in-Social-Services/124667167552008" title="http://www.facebook.com/pages/Institute-for-Research-and-Innovation-in-Social-Services/124667167552008">http://www.facebook.com/pages/Institute-for-Research-and-Innovation-in-S...</a> but we haven't so far been very good at using it.  We get a lot more response from Twitter.  LInkedIn too is beginning to generate good discussions.</p>
+<img src="../sites/default/files/imagecache/user_image_small/themes/comment/images/icn-user-default.png" alt="ContentAdmin&#039;s picture" title="ContentAdmin&#039;s picture" width="42" height="42" class="imagecache imagecache-user_image_small"/></div>        <h3><a href="digital-engagement.html#comment-17" title="Permanent link to this comment." class="active">Twitter and Facebook</a></h3>    <p>Very happy to promote discussion wherever we can.  We have a Facebook page <a href="https://www.facebook.com/pages/Institute-for-Research-and-Innovation-in-Social-Services/124667167552008" title="https://www.facebook.com/pages/Institute-for-Research-and-Innovation-in-Social-Services/124667167552008">https://www.facebook.com/pages/Institute-for-Research-and-Innovation-in-S...</a> but we haven't so far been very good at using it.  We get a lot more response from Twitter.  LInkedIn too is beginning to generate good discussions.</p>
     <hr/>
       </div>
   <div class="comment-meta">
@@ -146,10 +146,10 @@ We are using the hashtag #deukcare to promote discussion on Twitter. There has b
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -158,7 +158,7 @@ We are using the hashtag #deukcare to promote discussion on Twitter. There has b
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
