--- a/content/embedding-evidence.html
+++ b/content/embedding-evidence.html
@@ -68,8 +68,8 @@
     					    <h1 id="page-title" >Embedding Evidence</h1>    					              				</div><!-- #page-headline -->
 															<div id="node-91" class="node  node-book clear-block">
   <div class="content clear-block">
-            <p>IRISS conducted a workshop at the CRFR (<a href="http://www.crfr.ac.uk/" target="_blank">Centre for Research on Families and Relationships</a>) 10th Anniversary National Conference: Influencing Society - The role of social research.<br />
-As part of the workshop, we were interested to discuss the challenges and solutions to embedding evidence in practice. Participant responses are indicated in this section below. We are very interested in gathering more thoughts and learning from your experiences. Please feel free to add any comments in the field below. &nbsp; For further information about our evidence-informed practice work see&nbsp;<a href="http://www.iriss.org.uk/about/eip" target="_blank">http://www.iriss.org.uk/about/eip</a>&nbsp;for further information about our work,&nbsp; and we would be delighted to talk to you further.</p>
+            <p>IRISS conducted a workshop at the CRFR (<a href="https://www.crfr.ac.uk/" target="_blank">Centre for Research on Families and Relationships</a>) 10th Anniversary National Conference: Influencing Society - The role of social research.<br />
+As part of the workshop, we were interested to discuss the challenges and solutions to embedding evidence in practice. Participant responses are indicated in this section below. We are very interested in gathering more thoughts and learning from your experiences. Please feel free to add any comments in the field below. &nbsp; For further information about our evidence-informed practice work see&nbsp;<a href="https://www.iriss.org.uk/about/eip" target="_blank">https://www.iriss.org.uk/about/eip</a>&nbsp;for further information about our work,&nbsp; and we would be delighted to talk to you further.</p>
   <div id="book-navigation-91" class="book-navigation">
     <ul class="menu"><li class="leaf first"><a href="challenges-embedding-evidence.html">Challenges to embedding evidence</a></li>
 <li class="leaf"><a href="solutions-embedding-evidence.html">Solutions to embedding evidence</a></li>
@@ -114,10 +114,10 @@ As part of the workshop, we were interested to discuss the challenges and soluti
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -126,7 +126,7 @@ As part of the workshop, we were interested to discuss the challenges and soluti
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
