--- a/content/examples-online-marketplaces.html
+++ b/content/examples-online-marketplaces.html
@@ -78,59 +78,59 @@
 		<a href="https://www.shop4support.com/s4s/ui/content/">https://www.shop4support.com</a></li>
 </ul>
 <h3>
-	<a href="http://www.choosemycare.com/">Choose my Care</a></h3>
+	<a href="https://www.choosemycare.com/">Choose my Care</a></h3>
 <p>Choose My Care provides a social care and support services directory aimed at individual budget holders, self funders, brokers and advocates. Users can search, reserve, book and pay for the goods and services they want from service suppliers (care homes, nursing agencies, home care agencies etc). The matching service is free for service users, the care providers being charged a membership fee. The company has extended its services to provide an independent advisory service to visit and report on care homes specified by the client. The service is currently focused on Kent, Surrey, Sussex, Isle of Wight, Dorset and Hampshire.</p>
 <ul>
 <li>
-		<a href="http://www.choosemycare.com/">http://www.choosemycare.com/</a></li>
+		<a href="https://www.choosemycare.com/">https://www.choosemycare.com/</a></li>
 <li>
 		Twitter <a href="https://twitter.com/choosemycare">@choosemycare</a></li>
 </ul>
 <h3>
-	<a href="http://www.sliversoftime.com/">Slivers-of-Time</a></h3>
-<p>While Slivers-of-Time does not offer a direct e-marketplace, it is a pioneer of an online labour market concept that allows people to sell their labour in small blocks, or &quot;slivers&quot;, of time. Greenwich Council, Warwickshire County Council and Hertfordshire Council are pioneering Slivers-of-Time. Service users requiring an assistant for, say, an afternoon, log on and are presented with a list of workers, who have been vetted. Training is available on matters such as food hygiene, confidentiality, moving and handling, medication and lone working. Volunteers are supervised and carers and service users have regular reviews. Slivers-of-Time is being used for the Hertfordshire Council&#39;s innovative <a href="http://www.bookyourownbreaks.com/">Book Your Own Breaks</a> and <a href="http://www.hertsdirect.org/services/advben/carersupport/supportadcarers/carerbreaks/breakaway/">Breakaway for Carers</a>.</p>
+	<a href="https://www.sliversoftime.com/">Slivers-of-Time</a></h3>
+<p>While Slivers-of-Time does not offer a direct e-marketplace, it is a pioneer of an online labour market concept that allows people to sell their labour in small blocks, or &quot;slivers&quot;, of time. Greenwich Council, Warwickshire County Council and Hertfordshire Council are pioneering Slivers-of-Time. Service users requiring an assistant for, say, an afternoon, log on and are presented with a list of workers, who have been vetted. Training is available on matters such as food hygiene, confidentiality, moving and handling, medication and lone working. Volunteers are supervised and carers and service users have regular reviews. Slivers-of-Time is being used for the Hertfordshire Council&#39;s innovative <a href="https://www.bookyourownbreaks.com/">Book Your Own Breaks</a> and <a href="https://www.hertsdirect.org/services/advben/carersupport/supportadcarers/carerbreaks/breakaway/">Breakaway for Carers</a>.</p>
 <ul>
 <li>
-		<a href="http://www.slivers.com/">http://www.slivers.com/</a></li>
+		<a href="https://www.slivers.com/">https://www.slivers.com/</a></li>
 <li>
 		Twitter <a href="https://twitter.com/sliversoftime">@sliversoftime</a></li>
 </ul>
 <h3>
-	<a href="http://www.bookyourownbreaks.com/">Book Your Own Breaks</a></h3>
+	<a href="https://www.bookyourownbreaks.com/">Book Your Own Breaks</a></h3>
 <p>The Book Your Own Breaks service was launched in May 2010 as a secure marketplace for carers to book care support workers themselves, although they can still use Crossroads Care if they do not want to book the service themselves. The care support workers, who can provide personal care, are vetted, trained, supervised and employed by Crossroads Care. Most breaks are funded by council carers&#39; grants.</p>
 <ul>
 <li>
-		<a href="http://www.bookyourownbreaks.com/">http://www.bookyourownbreaks.com/</a></li>
+		<a href="https://www.bookyourownbreaks.com/">https://www.bookyourownbreaks.com/</a></li>
 </ul>
 <h3>
-	<a href="http://www.hertsdirect.org/services/advben/carersupport2/supportadcarers/carerbreaks/breakaway/">Breakaway for Carers</a></h3>
-<p>Breakaway for Carers is being piloted by Hertfordshire Council and Hounslow Council. The service recruits volunteer sitters to offer companionship to an older or disabled person. The web-based platform provides an infrastructure that enables local authorities and the voluntary sector to better support service provision, giving them a tool to increase the number of active volunteers. The Social Care Card <a href="http://www.socialcarecard.com/">www.socialcarecard.com</a> is expected to be available early in 2012 and addresses the issue of finding trusted workers who have been verified by a trusted organisation.</p>
+	<a href="https://www.hertsdirect.org/services/advben/carersupport2/supportadcarers/carerbreaks/breakaway/">Breakaway for Carers</a></h3>
+<p>Breakaway for Carers is being piloted by Hertfordshire Council and Hounslow Council. The service recruits volunteer sitters to offer companionship to an older or disabled person. The web-based platform provides an infrastructure that enables local authorities and the voluntary sector to better support service provision, giving them a tool to increase the number of active volunteers. The Social Care Card <a href="https://www.socialcarecard.com/">www.socialcarecard.com</a> is expected to be available early in 2012 and addresses the issue of finding trusted workers who have been verified by a trusted organisation.</p>
 <ul>
 <li>
-		<a href="http://www.bookyourownbreaks.com/">http://www.bookyourownbreaks.com/</a></li>
+		<a href="https://www.bookyourownbreaks.com/">https://www.bookyourownbreaks.com/</a></li>
 </ul>
 <h3>
-	<a href="http://www.socialcarecard.com/">The Social Care Card </a></h3>
+	<a href="https://www.socialcarecard.com/">The Social Care Card </a></h3>
 <p>This membership scheme aims to enable social care workers to demonstrate a basic level of knowledge <span>and work to standards set by a regulated service</span><span>. The worker will also carry work insurance cover through their membership. An individual or organisation using the system can instantly see where they can get care and support and make a choice about hiring a worker, knowing that the person delivering the care and support has been verified to the highest standard. No further information is available at the moment.&gt;</span></p>
 <ul>
 <li>
-		<a href="http://www.socialcarecard.com/">http://www.socialcarecard.com/</a></li>
+		<a href="https://www.socialcarecard.com/">https://www.socialcarecard.com/</a></li>
 </ul>
 <h3>
-	<a href="http://www.asktara.org.uk/">AskTara</a></h3>
-<p>AskTara was developed by <a href="http://www.thecommunitygateway.org.uk/">Community Gateway CIC</a> in partnership with Improvement and Efficiency West Midlands and <a href="http://wwwjipwestmidlands.blogspot.com/">Joint Improvement Partnership</a>. It offers information and advice about assistive technology (AT)<sup><a name="ftnt_ref1">[1]</a></sup> along with ratings and reviews, user blogs, guides and product demonstrations. An interesting and useful feature is the ability to select and compare products.</p>
+	<a href="https://www.asktara.org.uk/">AskTara</a></h3>
+<p>AskTara was developed by <a href="https://www.thecommunitygateway.org.uk/">Community Gateway CIC</a> in partnership with Improvement and Efficiency West Midlands and <a href="https://wwwjipwestmidlands.blogspot.com/">Joint Improvement Partnership</a>. It offers information and advice about assistive technology (AT)<sup><a name="ftnt_ref1">[1]</a></sup> along with ratings and reviews, user blogs, guides and product demonstrations. An interesting and useful feature is the ability to select and compare products.</p>
 <ul>
 <li>
-		<a href="http://www.asktara.org.uk/">http://www.asktara.org.uk/</a></li>
+		<a href="https://www.asktara.org.uk/">https://www.asktara.org.uk/</a></li>
 <li>
 		Twitter <a href="https://twitter.com/TCG_CIC">@TCG_CIC</a></li>
 </ul>
 <h3>
-	<a href="http://www.deaf247.co.uk/">Deaf 24/7</a></h3>
+	<a href="https://www.deaf247.co.uk/">Deaf 24/7</a></h3>
 <p>The Deaf 24/7 site provides a Directory of British Sign Language and deaf related resources. It offers a bookshop which, interestingly, is powered by Amazon.</p>
 <ul>
 <li>
-		<a href="http://www.deaf247.co.uk/">http://www.deaf247.co.uk/</a></li>
+		<a href="https://www.deaf247.co.uk/">https://www.deaf247.co.uk/</a></li>
 </ul>
 <p>&nbsp;</p>
   <div id="book-navigation-65" class="book-navigation">
@@ -188,10 +188,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a>
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a>
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -200,7 +200,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
