--- a/content/internet-and-society.html
+++ b/content/internet-and-society.html
@@ -69,7 +69,7 @@
     					    <h1 id="page-title" >The internet and society</h1>    					              				</div><!-- #page-headline -->
 															<div id="node-72" class="node  node-book clear-block">
   <div class="content clear-block">
-            <p>Over the last fifteen years or so the internet and the world wide web have become firmly established in the mainstream of everyday life. According to the <a href="http://www.ons.gov.uk/ons/rel/rdit2/internet-access---households-and-individuals/2010/stb-internet-access---households-and-individuals--2010.pdf">Office for National Statistics (2010)</a>, 30.1 million adults in the UK (60 per cent) accessed the internet every day or almost every day in 2010. This is nearly double the estimate of 16.5 million adults in 2006.</p>
+            <p>Over the last fifteen years or so the internet and the world wide web have become firmly established in the mainstream of everyday life. According to the <a href="https://www.ons.gov.uk/ons/rel/rdit2/internet-access---households-and-individuals/2010/stb-internet-access---households-and-individuals--2010.pdf">Office for National Statistics (2010)</a>, 30.1 million adults in the UK (60 per cent) accessed the internet every day or almost every day in 2010. This is nearly double the estimate of 16.5 million adults in 2006.</p>
 <p>The number of adults who had never accessed the internet in 2010 decreased to 9.2 million, from 10.2 million in 2009. The number of people who used a mobile device such as a laptop or mobile phone to access the internet away from the home or workplace increased from 40% to 45% between 2009 and 2010. Forty-four per cent of 16 to 24-year-old internet users used a mobile phone to access the internet. In 2010, 43% of internet users posted messages to social networking sites.</p>
 <p>Research from Experian Hitwise (FT Tech Hub 2011) found that social networks such as Facebook, YouTube and Twitter have superseded entertainment websites as the most popular for internet activity. Use of social media now accounts for 12.4 per cent of all time online, with total traffic to such sites increasing by 17 per cent from 2010. According to Shirky (2008)</p>
 <blockquote><p>Electronic networks are enabling novel forms of collective action, enabling the creation of collaborative groups that are larger and more distributed than at any other time in history.</p>
@@ -126,10 +126,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -138,7 +138,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
