--- a/content/local-government.html
+++ b/content/local-government.html
@@ -70,7 +70,7 @@
 															<div id="node-75" class="node  node-book clear-block">
   <div class="content clear-block">
             <p>In an effort to provide better signposting to the range of services available, some local authorities have developed, or participated in, "place-based" services in which the user may search for facilities within a specified distance of a specified geographical location such as a postcode.</p>
-<p>For example, the Dorset Partnership for Older People Programme (POPP)<a  href="http://www.dorsetforyou.com/popp">http://www.dorsetforyou.com/popp</a>, a collaboration between Dorset County Council, NHS Dorset, Dorset Fire and Rescue, Dorset Police, libraries, community matrons, community pharmacies and others, provides an online search of services and activities for the over 50s: coffee mornings, exercise classes, lunch clubs, meetings and events, as well as statutory services such as libraries and doctors. A number of local authorities are playing a part in the development of online marketplaces.</p>
+<p>For example, the Dorset Partnership for Older People Programme (POPP)<a  href="https://www.dorsetforyou.com/popp">https://www.dorsetforyou.com/popp</a>, a collaboration between Dorset County Council, NHS Dorset, Dorset Fire and Rescue, Dorset Police, libraries, community matrons, community pharmacies and others, provides an online search of services and activities for the over 50s: coffee mornings, exercise classes, lunch clubs, meetings and events, as well as statutory services such as libraries and doctors. A number of local authorities are playing a part in the development of online marketplaces.</p>
   <div id="book-navigation-65" class="book-navigation">
     
         <div class="page-links clear-block">
@@ -124,10 +124,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -136,7 +136,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
