--- a/content/personal-assistants.html
+++ b/content/personal-assistants.html
@@ -71,45 +71,45 @@
   <div class="content clear-block">
             <p>Some direct payment recipients directly employ a personal assistant (PA) who offers more personalised and flexible support. It is not mandatory for a personal assistant, or website providing a personal assistant matching service, to register with any regulatory body. Discussion with existing e-marketplace providers highlighted the difficulties of verifying basic information beyond the basics of a Disclosure Scotland or, in England, a Criminal Record Bureau (CRB) check and references.</p>
 <h3>
-	<a href="http://www.communitycatalysts.co.uk/">Community Catalysts</a></h3>
-<p>Community Catalysts has developed and tested an approach to quality marking that is tailored for micro social care enterprises. (<a href="http://www.thinklocalactpersonal.org.uk/_library/Resources/Personalisation/Localmilestones/Addendum_to_the_Practical_Guide__4.pdf">Community Catalysts, 2011</a>). The Quality Mark process has been piloted and Community Catalysts are now collaborating with a number of local authorities to explore how the Quality Mark will fit with existing and emerging procurement and accreditation processes.</p>
+	<a href="https://www.communitycatalysts.co.uk/">Community Catalysts</a></h3>
+<p>Community Catalysts has developed and tested an approach to quality marking that is tailored for micro social care enterprises. (<a href="https://www.thinklocalactpersonal.org.uk/_library/Resources/Personalisation/Localmilestones/Addendum_to_the_Practical_Guide__4.pdf">Community Catalysts, 2011</a>). The Quality Mark process has been piloted and Community Catalysts are now collaborating with a number of local authorities to explore how the Quality Mark will fit with existing and emerging procurement and accreditation processes.</p>
 <ul>
 <li>
-		<a href="http://www.communitycatalysts.co.uk/">http://www.communitycatalysts.co.uk/</a></li>
+		<a href="https://www.communitycatalysts.co.uk/">https://www.communitycatalysts.co.uk/</a></li>
 <li>
 		Twitter <a href="https://twitter.com/CommCats">@CommCats </a></li>
 </ul>
 <h3>
-	<a href="http://www.spaen.co.uk/">Scottish Personal Assistant Employers Network</a></h3>
-<p>Unison Scotland has developed a partnership approach with <a href="http://www.spaen.co.uk/">SPAEN</a> (Scottish Personal Assistant Employers Network) in recognition of the need to provide support for establishing and maintaining good employment practices which benefit both the direct payment holder and the personal assistant.</p>
+	<a href="https://www.spaen.co.uk/">Scottish Personal Assistant Employers Network</a></h3>
+<p>Unison Scotland has developed a partnership approach with <a href="https://www.spaen.co.uk/">SPAEN</a> (Scottish Personal Assistant Employers Network) in recognition of the need to provide support for establishing and maintaining good employment practices which benefit both the direct payment holder and the personal assistant.</p>
 <p>Local authorities should review their current assessment procedures to ensure that prospective employers are aware of their responsibilities as employers; that funding packages include provision to meet these responsibilities; that reviews include assessments of compliance with employment legislation and that employers are able to either undertake training or access professional advice on employment law. (SPAEN/UNISON, 2009)</p>
 <p>Members of SPAEN are people who have taken over the management of their own assistance rather have the state do it for them.</p>
 <ul>
 <li>
-		<a href="http://www.spaen.co.uk/">http://www.spaen.co.uk</a></li>
+		<a href="https://www.spaen.co.uk/">https://www.spaen.co.uk</a></li>
 </ul>
 <h3>
-	<a href="http://panet.org.uk/">PA Net Personal Assistants Network</a></h3>
+	<a href="https://panet.org.uk/">PA Net Personal Assistants Network</a></h3>
 <p>This network provides information and advice about employing a personal assistant and offers a forum to share ideas and best practice.</p>
 <ul>
 <li>
-		<a href="http://panet.org.uk/">http://panet.org.uk/</a></li>
+		<a href="https://panet.org.uk/">https://panet.org.uk/</a></li>
 </ul>
 <h3>
-	<a href="http://pickingyourpathways.org.uk/">Picking your Pathways</a></h3>
+	<a href="https://pickingyourpathways.org.uk/">Picking your Pathways</a></h3>
 <p>This service aims to inform and signpost people who are looking for training for personal assistants. Many of the training providers on the database have been recommended by people who employ personal assistants.</p>
 <ul>
 <li>
-		<a href="http://pickingyourpathways.org.uk/">http://www.pickingyourpathways.org.uk/</a></li>
+		<a href="https://pickingyourpathways.org.uk/">https://www.pickingyourpathways.org.uk/</a></li>
 </ul>
 <h3>
-	<a href="http://www.beingtheboss.co.uk/">Being the Boss</a></h3>
+	<a href="https://www.beingtheboss.co.uk/">Being the Boss</a></h3>
 <p>Being the Boss was created to address the lack of peer support available to disabled people who employ their own personal assistants. A forum enables information and experience to be is shared by disabled people who employ personal assistants.</p>
 <ul>
 <li>
-		<a href="http://www.beingtheboss.co.uk/">http://www.beingtheboss.co.uk/</a></li>
+		<a href="https://www.beingtheboss.co.uk/">https://www.beingtheboss.co.uk/</a></li>
 </ul>
-<p>An alternative model to the direct employment of a personal assistant by a service user is considered in the research paper (<a href="http://oro.open.ac.uk/cgi/export/26419/SummaryPage/oro-eprint-26419.html">Land and Himmelweit, 2010</a>) commissioned by Unison.</p>
+<p>An alternative model to the direct employment of a personal assistant by a service user is considered in the research paper (<a href="https://oro.open.ac.uk/cgi/export/26419/SummaryPage/oro-eprint-26419.html">Land and Himmelweit, 2010</a>) commissioned by Unison.</p>
 <blockquote><p>In some European countries the problems involved in becoming an employer are avoided or at least reduced, because the direct payment holder is not the employer. Instead the chosen personal assistant (PA) becomes an employee of the municipal authority as in the case of Finland and Norway. They enjoy the same benefits as other municipal employees and can join their pension scheme. In Norway direct payment recipients can now choose a voluntary organisation representing people with disabilities (ALABO) to become their chosen PA&#39;s employer. Those needing care have none of the responsibilities of being an employer. In the Netherlands, from the outset of the scheme in the 1990s, the national Social Insurance Board became the PA&#39;s employer. Direct payment holders can still make this arrangement but with the growth of home-care agencies, direct payment holders have the choice of either paying an agency to provide a personal assistant or arranging for their chosen PA to be employed by an agency.</p>
 </blockquote>
   <div id="book-navigation-65" class="book-navigation">
@@ -167,10 +167,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -179,7 +179,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
