--- a/content/personal-social-networks.html
+++ b/content/personal-social-networks.html
@@ -70,22 +70,22 @@
 															<div id="node-82" class="node  node-book clear-block">
   <div class="content clear-block">
             <p>Personal social networks are built around a specific person and a specific situation with the aim of helping that person solve a problem, deal with their situation or come to terms with a change in their life. Of course personal social networks exist in the offline world, but these networks can be widened and enhanced by web-based tools. Online personal networks are likely <span>to be much </span><span>more restrictive in terms of access and membership than say, Facebook.</span></p>
-<p>For example, <a href="http://tyze.com/">Tyze Personal Network </a> is based upon research from the <a href="http://www.planinstitute.ca/?q=taxonomy/term/115">PLAN Institute</a> which highlighted the power of personal networks to help people face life challenges. The Tyze online personal network is intended to make it easy for people to support someone they care about, and for governments and health care institutions to collaborate with them. It is a secure, online personal network that bridges informal and formal systems of care. Tyze Networks are created around a specific person and a specific situation, and allow connected individuals to share and communicate using messages, events, tasks, stories and photos.</p>
+<p>For example, <a href="https://tyze.com/">Tyze Personal Network </a> is based upon research from the <a href="https://www.planinstitute.ca/?q=taxonomy/term/115">PLAN Institute</a> which highlighted the power of personal networks to help people face life challenges. The Tyze online personal network is intended to make it easy for people to support someone they care about, and for governments and health care institutions to collaborate with them. It is a secure, online personal network that bridges informal and formal systems of care. Tyze Networks are created around a specific person and a specific situation, and allow connected individuals to share and communicate using messages, events, tasks, stories and photos.</p>
 <ul>
 <li>
-		<a href="http://tyze.com/">http://tyze.com/</a></li>
+		<a href="https://tyze.com/">https://tyze.com/</a></li>
 <li>
-		<a href="http://www.planinstitute.ca">http://www.planinstitute.ca</a></li>
+		<a href="https://www.planinstitute.ca">https://www.planinstitute.ca</a></li>
 </ul>
 <p><a href="https://crossroadscarecroydon.tyze.com/">Crossroads Care Croydon </a> is using a Tyze Personal Network to extend its services online. People served by Crossroads Care Croydon create an individual online network to enable friends, family, neighbours and carers to connect and collaborate.</p>
 <ul>
 <li>
 		<a href="https://crossroadscarecroydon.tyze.com/">https://crossroadscarecroydon.tyze.com/</a></li>
 </ul>
-<p><a href="http://www.mypeopleandplaces.co.uk/">My People and Places </a> is a secure, moderated, social-networking website for people with learning disabilities, their carers, families and supporters. My People and Places enable an individual, their family and the professionals around them to work closely together to effectively utilise the resources available to them. It gives the individual the opportunity to share resources and find a community supported solution.</p>
+<p><a href="https://www.mypeopleandplaces.co.uk/">My People and Places </a> is a secure, moderated, social-networking website for people with learning disabilities, their carers, families and supporters. My People and Places enable an individual, their family and the professionals around them to work closely together to effectively utilise the resources available to them. It gives the individual the opportunity to share resources and find a community supported solution.</p>
 <ul>
 <li>
-		<a href="http://www.mypeopleandplaces.co.uk/">http://www.mypeopleandplaces.co.uk/</a></li>
+		<a href="https://www.mypeopleandplaces.co.uk/">https://www.mypeopleandplaces.co.uk/</a></li>
 </ul>
 <p>There is considerable research about the value of personal support networks in the context of building social capital within communities. However, it is less clear whether the diverse community support developments available online ranging from local community websites to personal online support networks have explored how their individual projects can become more connected and integrated.</p>
   <div id="book-navigation-65" class="book-navigation">
@@ -141,10 +141,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -153,7 +153,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
