--- a/content/rating-and-assessment.html
+++ b/content/rating-and-assessment.html
@@ -69,7 +69,7 @@
     					    <h1 id="page-title" >Rating and assessment</h1>    					              				</div><!-- #page-headline -->
 															<div id="node-83" class="node  node-book clear-block">
   <div class="content clear-block">
-            <p>User feedback, recommendations and ratings are an established part of the leading e-marketplaces such as Amazon and eBay. A more personalised approach to social care based on giving service users and carers a more direct say over service quality and improvement underpins the regulatory functions performed by the Social Care and Social Work Improvement Scotland (SCSWIS) <a href="http://www.scswis.com/">http://www.scswis.com/</a> and the Care Quality Commission (CQC) in England.</p>
+            <p>User feedback, recommendations and ratings are an established part of the leading e-marketplaces such as Amazon and eBay. A more personalised approach to social care based on giving service users and carers a more direct say over service quality and improvement underpins the regulatory functions performed by the Social Care and Social Work Improvement Scotland (SCSWIS) <a href="https://www.scswis.com/">https://www.scswis.com/</a> and the Care Quality Commission (CQC) in England.</p>
 <p>On 1 April 2011, the work of the Care Commission in Scotland passed to a new, unified body, Social Care and Social Work Improvement Scotland (SCSWIS), which regulates and inspects care services. The formal assessments for regulated care services are available online. SCSWIS provides graded ratings, unlike the Care Quality Commission (CQC) in England who stopped awarding quality ratings in July 2010.</p>
 <p><a href="https://www.patientopinion.org.uk/">Patient Opinion </a> is a pioneer in the rating of health services and the UK&#39;s independent feedback platform for health services. Patient Opinion is working to create an ethical and useful system of web-based feedback, which helps improve the standards of care. Patients can post their experiences, suggestions and criticism of their NHS experience.</p>
 <blockquote><p>Patient Opinion has been embraced by the staff at City Health Care Partnership. It is an easy way for service users to say thank you, and importantly to suggest service improvements and of course to voice any concerns. The Feedback we received on Patient Opinion tells us which part of the service is important and valued, which is a great benefit to our organisation.</p>
@@ -81,14 +81,14 @@
 <li>
 		Twitter <a href="https://twitter.com/patientopinion">@patientopinion</a></li>
 </ul>
-<p><a href="http://www.carehome.co.uk/">Best-Care-Home</a> is a database of care homes and agencies in England. The site has a focus on personal recommendations from residents, relatives, visitors and staff with users and carers able to comment about care homes which are featured on the website. The fact that not all care homes and agencies are listed does limit the usefulness of the recommendations. Best Care Homes Awards are voted for by users of the best-care-home.co.uk website, with specific feedback sought from residents living in the nominated care homes, their family and friends, as well as the views of employees and health care professionals. The award is only open to nursing homes, residential care homes and domiciliary care agencies that have been awarded a 3 star, &quot;Excellent&quot; rating by the Care Quality Commission. The awards are supported by The National Skills Academy.</p>
+<p><a href="https://www.carehome.co.uk/">Best-Care-Home</a> is a database of care homes and agencies in England. The site has a focus on personal recommendations from residents, relatives, visitors and staff with users and carers able to comment about care homes which are featured on the website. The fact that not all care homes and agencies are listed does limit the usefulness of the recommendations. Best Care Homes Awards are voted for by users of the best-care-home.co.uk website, with specific feedback sought from residents living in the nominated care homes, their family and friends, as well as the views of employees and health care professionals. The award is only open to nursing homes, residential care homes and domiciliary care agencies that have been awarded a 3 star, &quot;Excellent&quot; rating by the Care Quality Commission. The awards are supported by The National Skills Academy.</p>
 <ul>
 <li>
-		Web <a href="http://www.carehome.co.uk/">http://www.carehome.co.uk</a></li>
+		Web <a href="https://www.carehome.co.uk/">https://www.carehome.co.uk</a></li>
 <li>
 		Twitter <a href="https://twitter.com/voiceofcare">@voiceofcare</a></li>
 </ul>
-<p><a href="http://www.cqc.org.uk/public/news/new-excellence-award-consultation-begins">Care Quality Commission England Adult Social Care Excellence Award</a></p>
+<p><a href="https://www.cqc.org.uk/public/news/new-excellence-award-consultation-begins">Care Quality Commission England Adult Social Care Excellence Award</a></p>
 <p>The CQC-backed award, due to launch in April 2012, will be open to all social care providers offering regulated services, including care homes, domiciliary care, supported living and Shared Lives services, rehabilitation and residential substance misuse services. The scheme is voluntary and there will be an additional cost to achieve the excellence award. Care services will be assessed on a range of criteria including staff training and turnover, daily activities for residents, and the quality of care offered. The results of the tests will be published to give families information about what they can expect from individual care services.</p>
 <p>Apart from the regulatory care assessments, there are no comprehensive care rating systems available to inform service users and carers about the quality of care provided by individual care providers. E-marketplaces are developing rating systems but there are insufficient numbers using the services to make the ratings significant. Enabled by Design offers a good example of how service users and carers contribute to reviewing and rating care products. The model provided by the highly regarded Patient Opinion website would be a welcome addition to enable service users, carers, families and friends to comment about their experiences of care services.</p>
   <div id="book-navigation-65" class="book-navigation">
@@ -137,10 +137,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -149,7 +149,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
