--- a/content/social-media-social-services.html
+++ b/content/social-media-social-services.html
@@ -70,11 +70,11 @@
   <div class="content clear-block">
             <p><strong>A report for IRISS by Focused on Learning Ltd.</strong></p>
 <p>	<strong>October 2010</strong><br />
-The challenge for all councils now is to move social media off their list of challenges and on to their list of opportunities. If they don&rsquo;t, they face moving into a changing world under equipped and under-resourced. If they do though, they may find that the solutions they seek are right under their nose. (<a href="http://www.socialbysocial.com/">NESTA, 2010</a>)</p>
-<p>	<a href="http://www.iriss.org.uk/">IRISS</a> has been in the forefront of developing and promoting the use of social media as a cost effective and efficient way of sharing knowledge.</p>
-<p>	<a href="http://focussedonlearning.com">Focused on Learning</a> is a consultancy and training service, specialising in e-learning, web communications and publishing for the public, academic and not-for-profit sectors. The focus is on practical tools and techniques to encourage knowledge sharing, collaboration and foster environments that connect staff, partners and customers to relevant information or expertise</p>
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/2.5/scotland/"></a></p>
-<p>Social Media in the Social Services by <a href="http://www.iriss.org.uk">IRISS</a> is licensed under a  <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/2.5/scotland/">Creative Commons Attribution-NonCommercial-NoDerivs 2.5 UK: Scotland License</a>.</p>
+The challenge for all councils now is to move social media off their list of challenges and on to their list of opportunities. If they don&rsquo;t, they face moving into a changing world under equipped and under-resourced. If they do though, they may find that the solutions they seek are right under their nose. (<a href="https://www.socialbysocial.com/">NESTA, 2010</a>)</p>
+<p>	<a href="https://www.iriss.org.uk/">IRISS</a> has been in the forefront of developing and promoting the use of social media as a cost effective and efficient way of sharing knowledge.</p>
+<p>	<a href="https://focussedonlearning.com">Focused on Learning</a> is a consultancy and training service, specialising in e-learning, web communications and publishing for the public, academic and not-for-profit sectors. The focus is on practical tools and techniques to encourage knowledge sharing, collaboration and foster environments that connect staff, partners and customers to relevant information or expertise</p>
+<p><a rel="license" href="https://creativecommons.org/licenses/by-nc-nd/2.5/scotland/"></a></p>
+<p>Social Media in the Social Services by <a href="https://www.iriss.org.uk">IRISS</a> is licensed under a  <a rel="license" href="https://creativecommons.org/licenses/by-nc-nd/2.5/scotland/">Creative Commons Attribution-NonCommercial-NoDerivs 2.5 UK: Scotland License</a>.</p>
   <div id="book-navigation-3" class="book-navigation">
     <ul class="menu"><li class="leaf first"><a href="../node/4.html">Preface</a></li>
 <li class="leaf"><a href="../node/5.html">What do we mean by social media?</a></li>
@@ -146,7 +146,7 @@ I would be interested in developing a comprehensive online directory of services
     ﻿<div class="user-picture">
 <img src="../sites/default/files/imagecache/user_image_small/themes/comment/images/icn-user-default.png" alt="ContentAdmin&#039;s picture" title="ContentAdmin&#039;s picture" width="42" height="42" class="imagecache imagecache-user_image_small"/></div>        <h3><a href="social-media-social-services.html#comment-23" title="Permanent link to this comment." class="active">Social media in the community</a></h3>    <p>Hi Craig<br />
 Thanks for your comment.  We couldn't agree more that employees in the public sector need to be allowed unfettered access to social media if they are to improve service delivery in a way that engages with clients.  Thanks for passing on the report to your heads of service.  We'd love to hear how you get on.  You might also send them details of what Cornwall has done<br />
-<a href="http://www.cornwall.gov.uk/default.aspx?page=28872" title="http://www.cornwall.gov.uk/default.aspx?page=28872">http://www.cornwall.gov.uk/default.aspx?page=28872</a></p>
+<a href="https://www.cornwall.gov.uk/default.aspx?page=28872" title="https://www.cornwall.gov.uk/default.aspx?page=28872">https://www.cornwall.gov.uk/default.aspx?page=28872</a></p>
 <p>Best wishes</p>
 <p>Ian Watson</p>
     <hr/>
@@ -203,10 +203,10 @@ Thanks for your comment.  We couldn't agree more that employees in the public se
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -215,7 +215,7 @@ Thanks for your comment.  We couldn't agree more that employees in the public se
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
