--- a/content/social-media.html
+++ b/content/social-media.html
@@ -69,7 +69,7 @@
     					    <h1 id="page-title" >Social media</h1>    					              				</div><!-- #page-headline -->
 															<div id="node-66" class="node  node-book clear-block">
   <div class="content clear-block">
-            <p>The terms <a href="http://en.wikipedia.org/wiki/Social_media">&quot;social media&quot;</a> and <a href="http://en.wikipedia.org/wiki/Social_networking">&quot;social networking&quot;</a> are often used interchangeably to refer to web-based tools and technologies that support online communication and information sharing. They turn communication into interactive dialogue (<a href="http://en.wikipedia.org/wiki/Social_media">Wikipedia</a>).</p>
+            <p>The terms <a href="https://en.wikipedia.org/wiki/Social_media">&quot;social media&quot;</a> and <a href="https://en.wikipedia.org/wiki/Social_networking">&quot;social networking&quot;</a> are often used interchangeably to refer to web-based tools and technologies that support online communication and information sharing. They turn communication into interactive dialogue (<a href="https://en.wikipedia.org/wiki/Social_media">Wikipedia</a>).</p>
 <p>The term social media encompasses various tools and services, including:</p>
 <ul>
 <li>
@@ -90,11 +90,11 @@
 		location based services (e.g Foursquare)</li>
 </ul>
 <p>Web 2.0 is often used as a collective term for the range of technologies and tools that allows users to interact and collaborate with each other using social media.</p>
-<p>The more well known services such as Facebook have reported a substantial increase in the number of registered users and are increasingly used by individuals and organisations to create networks in which they share information, opinion and intelligence (<a href="http://newsroom.fb.com/Key-Facts">http://newsroom.fb.com/Key-Facts</a>).</p>
-<p>The growth in the use of social media reflects the changing nature of the world wide web. In the 1990s the web was largely used as a broadcast medium through which users passively consumed information. Now, it offers scope for interactive communication. As Jos Creese, then President of the Society of Information Technology Management (<a href="http://www.socitm.net/betterconnected">Soctim 2011</a>), observes:</p>
+<p>The more well known services such as Facebook have reported a substantial increase in the number of registered users and are increasingly used by individuals and organisations to create networks in which they share information, opinion and intelligence (<a href="https://newsroom.fb.com/Key-Facts">https://newsroom.fb.com/Key-Facts</a>).</p>
+<p>The growth in the use of social media reflects the changing nature of the world wide web. In the 1990s the web was largely used as a broadcast medium through which users passively consumed information. Now, it offers scope for interactive communication. As Jos Creese, then President of the Society of Information Technology Management (<a href="https://www.socitm.net/betterconnected">Soctim 2011</a>), observes:</p>
 <blockquote><p>The web is no longer about technology. It is about delivering lower cost services&nbsp;designed around the user. Any public service organisation, therefore, which is not fully integrating the potential of web delivery in financial and customer service strategies, is likely to be under-performing in both areas.</p>
 </blockquote>
-<p>Writing in a Guardian blog, <a href="http://www.theguardian.com/society/joepublic/2011/mar/17/internet-administration-personal-care-budgets">Barr (2011)</a> highlights the possibilities for service users and carers:</p>
+<p>Writing in a Guardian blog, <a href="https://www.theguardian.com/society/joepublic/2011/mar/17/internet-administration-personal-care-budgets">Barr (2011)</a> highlights the possibilities for service users and carers:</p>
 <blockquote><p>Presenting information in a smart, user friendly and attractive manner is becoming an increasingly important dimension in providing any front line service, with websites acting as the public&#39;s window to service providers.</p>
 </blockquote>
   <div id="book-navigation-65" class="book-navigation">
@@ -148,10 +148,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -160,7 +160,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
