--- a/node/10.html
+++ b/node/10.html
@@ -71,12 +71,12 @@
   <div class="content clear-block">
             <blockquote><p>
 	Social networking is the logical extension of our human tendencies toward togetherness, whether that socialization is down the hall or across the world. (Weaver and Morrison, 2008, p100)</p></blockquote>
-<p>A report from the <a href="http://www.lgiu.org.uk/oldsite/whatwedo/Publications/Pages/3006092.aspx">Local Government Information Unit</a> report echoes this sentiment, arguing that it is redundant to talk about &lsquo;using the web&rsquo; as these techniques and tools are more or less fully integrated into the way in which we work. <em> </em></p>
+<p>A report from the <a href="https://www.lgiu.org.uk/oldsite/whatwedo/Publications/Pages/3006092.aspx">Local Government Information Unit</a> report echoes this sentiment, arguing that it is redundant to talk about &lsquo;using the web&rsquo; as these techniques and tools are more or less fully integrated into the way in which we work. <em> </em></p>
 <p><em>&hellip; It&rsquo;s vital to mainstream the mindset as well as the technology and ensure that the best aspects of the web &ndash; open, collaborative, non hierarchical and thus, ultimately, democratic &ndash; are central to all our activities online and off. </em></p>
-<p><a href="http://www.socialbysocial.com/">NESTA</a> acknowledges that engaging with social media presents new challenges to the structure, working culture, staff management and technical strategy for councils, and that there are risks. But it goes on to say that not engaging represents a far greater risk.</p>
+<p><a href="https://www.socialbysocial.com/">NESTA</a> acknowledges that engaging with social media presents new challenges to the structure, working culture, staff management and technical strategy for councils, and that there are risks. But it goes on to say that not engaging represents a far greater risk.</p>
 <blockquote><p>
 	The challenge for all councils now is to move social media off their list of challenges and on to their list of opportunities. If they don&rsquo;t, they face moving into a changing world under equipped and under-resourced. If they do though, they may find that the solutions they seek are right under their nose.</p></blockquote>
-<p>The <a href="http://www.continuouslearningframework.com">Continuous Learning Framework</a> sets out what people in the social service workforce need to be able to do their job well now and in the future and describes what employers need to do to support them. It states that an individual can be committed to doing a good job but unless they are part of an organisation that supports them to learn it can be very difficult to make the most of their capabilities. The organisational capabilities describe the culture and conditions in the workplace that enable social service workers to be the best they can be. There are six organisational capabilities, and four are of particular relevance:</p>
+<p>The <a href="https://www.continuouslearningframework.com">Continuous Learning Framework</a> sets out what people in the social service workforce need to be able to do their job well now and in the future and describes what employers need to do to support them. It states that an individual can be committed to doing a good job but unless they are part of an organisation that supports them to learn it can be very difficult to make the most of their capabilities. The organisational capabilities describe the culture and conditions in the workplace that enable social service workers to be the best they can be. There are six organisational capabilities, and four are of particular relevance:</p>
 <ul>
 <li>
 		creating a learning and performance culture</li>
@@ -113,7 +113,7 @@
     ﻿<div class="user-picture">
 <img src="../sites/default/files/imagecache/user_image_small/themes/comment/images/icn-user-default.png" alt="ContentAdmin&#039;s picture" title="ContentAdmin&#039;s picture" width="42" height="42" class="imagecache imagecache-user_image_small"/></div>        <h3><a href="10.html#comment-15" title="Permanent link to this comment." class="active">Cornwall&#039;s social media policy</a></h3>    <p>Cornwall Council has implemented a social media policy which encourages the responsible use of social media by staff and elected emembers.  It includes a 'passport:  every employee who wishes to use social media completes an application, or business case, which is considered by the council's Internet and Email Monitoring Panel.<br />
  The reason for this is so that the council can maintain 'an accurate and up-to-date record of which personnel or departments are using social media and that the communications service can offer advice and guidance if it is required'</p>
-<p><a href="http://www.cornwall.gov.uk/Default.aspx?page=28872" title="http://www.cornwall.gov.uk/Default.aspx?page=28872">http://www.cornwall.gov.uk/Default.aspx?page=28872</a></p>
+<p><a href="https://www.cornwall.gov.uk/Default.aspx?page=28872" title="https://www.cornwall.gov.uk/Default.aspx?page=28872">https://www.cornwall.gov.uk/Default.aspx?page=28872</a></p>
     <hr/>
       </div>
   <div class="comment-meta">
@@ -158,10 +158,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -170,7 +170,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
