--- a/node/11.html
+++ b/node/11.html
@@ -74,7 +74,7 @@
 <h2>Corporate policies to foster creative use of the web</h2>
 <ul>
 <li>
-				Assume the workforce can be trusted to behave responsibly (why penalise the majority when only a few might be culpable? <a href="http://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it">Socitim</a>, 2009).</li>
+				Assume the workforce can be trusted to behave responsibly (why penalise the majority when only a few might be culpable? <a href="https://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it">Socitim</a>, 2009).</li>
 <li>
 				Do not routinely block access to social networking tools or websites.</li>
 <li>
@@ -161,7 +161,7 @@
 <div class="comment comment-published odd commenter-logged-in clear-block">
   <div class="content clear-block">
     ﻿<div class="user-picture">
-<img src="../sites/default/files/imagecache/user_image_small/pictures/picture-6.jpg" alt="jonbolton&#039;s picture" title="jonbolton&#039;s picture" width="42" height="42" class="imagecache imagecache-user_image_small"/></div>        <h3><a href="11.html#comment-9" title="Permanent link to this comment." class="active">HR and social media</a></h3>    <p>I read an interesting article in <a href="http://www.personneltoday.com/articles/01/11/2010/56849/hr-and-social-media-the-connectinghr-unconference.htm">Personnel Today</a> about HR and social media.</p>
+<img src="../sites/default/files/imagecache/user_image_small/pictures/picture-6.jpg" alt="jonbolton&#039;s picture" title="jonbolton&#039;s picture" width="42" height="42" class="imagecache imagecache-user_image_small"/></div>        <h3><a href="11.html#comment-9" title="Permanent link to this comment." class="active">HR and social media</a></h3>    <p>I read an interesting article in <a href="https://www.personneltoday.com/articles/01/11/2010/56849/hr-and-social-media-the-connectinghr-unconference.htm">Personnel Today</a> about HR and social media.</p>
 <p>The main themes seem to have been...</p>
 <ul>
 <li><strong>Organisations can use social media to listen to staff</strong><br />
@@ -173,7 +173,7 @@ HR can use social media to let other employees see what they do and see them as 
 </ul>
 <p>That's welcome news, but they agree with this report, that introducing these systems is not without its challenges.</p>
 <p>You can read the full article at<br />
-<a href="http://www.personneltoday.com/articles/01/11/2010/56849/hr-and-social-media-the-connectinghr-unconference.htm" title="http://www.personneltoday.com/articles/01/11/2010/56849/hr-and-social-media-the-connectinghr-unconference.htm">http://www.personneltoday.com/articles/01/11/2010/56849/hr-and-social-me...</a></p>
+<a href="https://www.personneltoday.com/articles/01/11/2010/56849/hr-and-social-media-the-connectinghr-unconference.htm" title="https://www.personneltoday.com/articles/01/11/2010/56849/hr-and-social-media-the-connectinghr-unconference.htm">https://www.personneltoday.com/articles/01/11/2010/56849/hr-and-social-me...</a></p>
     <hr/>
       </div>
   <div class="comment-meta">
@@ -218,10 +218,10 @@ HR can use social media to let other employees see what they do and see them as 
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -230,7 +230,7 @@ HR can use social media to let other employees see what they do and see them as 
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
