--- a/node/7.html
+++ b/node/7.html
@@ -70,7 +70,7 @@
 															<div id="node-7" class="node  node-book clear-block">
   <div class="content clear-block">
             <p>
-Socitm &ndash; the Society for Information Technology Management - in a <a href="http://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it"> report</a> published in November 2009 advocates that, rather than <em>blocking</em> it, IT managers should take a leading role in <em>promoting</em> the use social media. </p>
+Socitm &ndash; the Society for Information Technology Management - in a <a href="https://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it"> report</a> published in November 2009 advocates that, rather than <em>blocking</em> it, IT managers should take a leading role in <em>promoting</em> the use social media. </p>
 <p>The reasons cited by local authorities for banning or restricting access to social media include time wasting (staff will idle away the hours on Facebook), reputational risk (staff will post inappropriate comments on Twitter), bandwidth restrictions and security issues. In response the report suggests</p>
 <ul>
 <li>
@@ -84,14 +84,14 @@ Socitm &ndash; the Society for Information Technology Management - in a <a href=
 </ul>
 <p>
 	Further, social media could help address the looming budget issues by empowering employees in new ways of working.</p>
-<blockquote><p>You cannot ignore it, because whether your organisation uses it or not, the community that you serve will&hellip; If your organisation chooses to opt out of social media, be sure that your citizens will have something to say about you. You may block or restrict employee access to social media: almost all public sector organisations do, citing security concerns, time wasting, reputational risk and bandwidth restrictions. You should reconsider. (<a href="http://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it">Socitm, 2009</a>, p7) </p></blockquote>
+<blockquote><p>You cannot ignore it, because whether your organisation uses it or not, the community that you serve will&hellip; If your organisation chooses to opt out of social media, be sure that your citizens will have something to say about you. You may block or restrict employee access to social media: almost all public sector organisations do, citing security concerns, time wasting, reputational risk and bandwidth restrictions. You should reconsider. (<a href="https://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it">Socitm, 2009</a>, p7) </p></blockquote>
 <p>
 	The British Computer Society - the Chartered Institute for IT &ndash; suggests that the term &#39;social&#39; might be part of the problem as it suggests fun or frivolity and masks the business and educational value of these tools. <em>Collaboration</em> might be a much more accurate term: collaborating with customers, prospects, partners, employees, and colleagues.</p>
 <p>
-	<a href="http://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it">Socitim (2009)</a> agrees that the term &lsquo;social&rsquo; implies &lsquo;not related to work&rsquo; and perhaps discourages serious consideration as a serious business tool. <a href="http://www.socialbysocial.com">NESTA (2010)</a> suggests <em>personal media</em> as a better term to describe tools that place the power of broadcasting and publishing into the hands of everyone:</p>
+	<a href="https://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it">Socitim (2009)</a> agrees that the term &lsquo;social&rsquo; implies &lsquo;not related to work&rsquo; and perhaps discourages serious consideration as a serious business tool. <a href="https://www.socialbysocial.com">NESTA (2010)</a> suggests <em>personal media</em> as a better term to describe tools that place the power of broadcasting and publishing into the hands of everyone:</p>
 <blockquote><p>Like the railways, or the telephone, these tools are becoming part of the infrastructure of our society, changing how we do everything</p></blockquote>
 <p>
-	Urging councils to help their employees understand and exploit social media <a href="http://www.socialbysocial.com">NESTA (2010)</a> argues that if they truly understand the new technological and sociological context in which councils and their partners work, it should become obvious that it is only by engaging with these new tools that the risks can be managed and the opportunities made to outweigh the costs.</p>
+	Urging councils to help their employees understand and exploit social media <a href="https://www.socialbysocial.com">NESTA (2010)</a> argues that if they truly understand the new technological and sociological context in which councils and their partners work, it should become obvious that it is only by engaging with these new tools that the risks can be managed and the opportunities made to outweigh the costs.</p>
 <p>
 	Many councils are in fact using microblogging services such as Twitter and video sharing sites such as Youtube, or social networking tools such as Ning. The reason for using these services is that they easy and set up and use, much cheaper than building your own. But using them involves new processes, structures and skills. These skills will not be learned in regimes that regard &lsquo;social&rsquo; as &lsquo;not serious&rsquo; or &lsquo;frivolous&rsquo;.</p>
 <p>
@@ -101,7 +101,7 @@ Socitm &ndash; the Society for Information Technology Management - in a <a href=
 <blockquote><p>
 It is more likely that managers do not understand the opportunity, and are therefore unwilling to allocate resources to invest in social media. I<em>n short, the problem lies in getting senior management buy-in. This requires some briefing or education in the business possibilities and opportunities.</em></p></blockquote>
 <p>
-	The experiential nature of social media is recognised in a report commissioned by the Carnegie UK Trust <a href="http://www.carnegieuktrust.org.uk/getattachment/ee2be1a3-8a94-4d8b-963f-94e29c8a9781/Making-the-Connection--The-Use-of-Social-Technolog.aspx">(Charman-Anderson,S, 2010)</a>:</p>
+	The experiential nature of social media is recognised in a report commissioned by the Carnegie UK Trust <a href="https://www.carnegieuktrust.org.uk/getattachment/ee2be1a3-8a94-4d8b-963f-94e29c8a9781/Making-the-Connection--The-Use-of-Social-Technolog.aspx">(Charman-Anderson,S, 2010)</a>:</p>
 <blockquote><p>Social media is experiential in nature: it is difficult to fully understand social tools until one has participated and experienced them for oneself. Unlike basic computing skills, such as word processing or spreadsheet manipulation, the core understanding required to make good use of social technologies is cultural, not procedural. </p></blockquote>
 <p>
 	The vital point is that social media is not the same as &lsquo;basic computing&rsquo;. Because senior managers have been reluctant to take control, responsibility for access and use of social media has, by default, fallen to IT managers: a process known as <em>responsibility creep</em>.</p>
@@ -158,10 +158,10 @@ It is more likely that managers do not understand the opportunity, and are there
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -170,7 +170,7 @@ It is more likely that managers do not understand the opportunity, and are there
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
