--- a/node/8.html
+++ b/node/8.html
@@ -104,7 +104,7 @@
 <p>
 	Some 85% of the social services group said that they used social media from elsewhere (mainly home) when they could not get access from their workplace.  Furthermore, the commitment and thirst for knowledge and collaboration shown by these professionals is evident, with 97% accessing the sites in their own time.</p>
 <p>
-	The response rate was not high enough to draw statistically valid conclusions, especially from IT staff. The fourteen individuals in this category cited roughly the same concerns highlighted by <a href="http://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it">Socitim (2009).</a></p>
+	The response rate was not high enough to draw statistically valid conclusions, especially from IT staff. The fourteen individuals in this category cited roughly the same concerns highlighted by <a href="https://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it">Socitim (2009).</a></p>
 <ul>
 <li>
 		Security concerns, e.g. exposure to viruses, malware and spyware</li>
@@ -120,7 +120,7 @@
 		Negative attitude from management</li>
 </ul>
 <p>
-	The primary responsibility of IT managers is to secure continuity of services, data security, uptime of systems and prevention for spam and viruses. While we should not understate the need safe and secure data management systems, we also need accommodate innovative uses of web-based collaborative tools. As noted above, <a href="http://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it">Socitm (2009)</a> believes that most of the above concerns can either be overcome, are exaggerated, or are not necessarily the legitimate concern of the IT manager.</p>
+	The primary responsibility of IT managers is to secure continuity of services, data security, uptime of systems and prevention for spam and viruses. While we should not understate the need safe and secure data management systems, we also need accommodate innovative uses of web-based collaborative tools. As noted above, <a href="https://www.socitm.net/downloads/download/255/social_media-why_ict_management_should_lead_their_organisations_to_embrace_it">Socitm (2009)</a> believes that most of the above concerns can either be overcome, are exaggerated, or are not necessarily the legitimate concern of the IT manager.</p>
 <p>
 	In our survey we asked an open ended question about attitudes to social networks and one respondent made the telling point that all web activity can be monitored and action can therefore be taken against misusers. Worryingly one respondent was threatened with disciplinary action after trying to access a social work campaign on Facebook [the campaign in question was run by the Department for Children, Schools &amp; Families and the Department of Health].</p>
 <p>
@@ -176,10 +176,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -188,7 +188,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
