--- a/node/9.html
+++ b/node/9.html
@@ -70,7 +70,7 @@
 															<div id="node-9" class="node  node-book clear-block">
   <div class="content clear-block">
             <p>
-	In order to interact with and display the content of modern websites, web browsers must be of an adequate standard. Many local authorities require their staff to use Microsoft Internet Explorer version 6 (IE6) which is over eight years old and has several known security vulnerabilities: concerns have been raised by both the German and French governments (<a href="http://news.bbc.co.uk/1/hi/technology/8463516.stm">BBC, 2010a</a> and <a href="http://news.bbc.co.uk/1/hi/technology/8465038.stm">BBC, 2010b</a>). In addition some important information providers, such as Google, no longer support IE6.</p>
+	In order to interact with and display the content of modern websites, web browsers must be of an adequate standard. Many local authorities require their staff to use Microsoft Internet Explorer version 6 (IE6) which is over eight years old and has several known security vulnerabilities: concerns have been raised by both the German and French governments (<a href="https://news.bbc.co.uk/1/hi/technology/8463516.stm">BBC, 2010a</a> and <a href="https://news.bbc.co.uk/1/hi/technology/8465038.stm">BBC, 2010b</a>). In addition some important information providers, such as Google, no longer support IE6.</p>
 <p>
 	One reason cited for retaining IE6 was that it is required for legacy systems which might not work with more up-to-date versions of IE or with other browsers such as Firefox. This is a legitimate concern and a serious problem. One solution would be to install a modern browser for &lsquo;web browsing&rsquo;, leaving the older version purely for access to legacy systems.</p>
 <p>
@@ -101,10 +101,10 @@ In higher education institutions it is not unusual to allow users administrative
 <div class="comment comment-published odd commenter-logged-in clear-block">
   <div class="content clear-block">
     ﻿<div class="user-picture">
-<img src="../sites/default/files/imagecache/user_image_small/pictures/picture-14.jpg" alt="Ian Watson&#039;s picture" title="Ian Watson&#039;s picture" width="42" height="42" class="imagecache imagecache-user_image_small"/></div>        <h3><a href="9.html#comment-11" title="Permanent link to this comment." class="active">Internet Explorer 6 - Microsoft explains why you should upgrade</a></h3>    <p>Even Microsoft advises users to stop using IE6:  <a href="http://ie6countdown.com/" title="http://ie6countdown.com/">http://ie6countdown.com/</a></p>
+<img src="../sites/default/files/imagecache/user_image_small/pictures/picture-14.jpg" alt="Ian Watson&#039;s picture" title="Ian Watson&#039;s picture" width="42" height="42" class="imagecache imagecache-user_image_small"/></div>        <h3><a href="9.html#comment-11" title="Permanent link to this comment." class="active">Internet Explorer 6 - Microsoft explains why you should upgrade</a></h3>    <p>Even Microsoft advises users to stop using IE6:  <a href="https://ie6countdown.com/" title="https://ie6countdown.com/">https://ie6countdown.com/</a></p>
 <p>It is surprising, and depressing, the number of local authority users who have to use IE6.  </p>
 <p>Time to change!  </p>
-<p>If your IT manager is reluctant to change, suggest s/he looks at the official Microsoft advice <a href="http://ie6countdown.com/educate-others.html" title="http://ie6countdown.com/educate-others.html">http://ie6countdown.com/educate-others.html</a></p>
+<p>If your IT manager is reluctant to change, suggest s/he looks at the official Microsoft advice <a href="https://ie6countdown.com/educate-others.html" title="https://ie6countdown.com/educate-others.html">https://ie6countdown.com/educate-others.html</a></p>
     <hr/>
       </div>
   <div class="comment-meta">
@@ -149,10 +149,10 @@ In higher education institutions it is not unusual to allow users administrative
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -161,7 +161,7 @@ In higher education institutions it is not unusual to allow users administrative
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
