--- a/content/challenges-embedding-evidence.html
+++ b/content/challenges-embedding-evidence.html
@@ -69,7 +69,7 @@
     					    <h1 id="page-title" >Challenges to embedding evidence</h1>    					              				</div><!-- #page-headline -->
 															<div id="node-92" class="node  node-book clear-block">
   <div class="content clear-block">
-            <p><a href="http://www.flickr.com/photos/openlx/6437010675/" title="Challenges to embedding evidence by iriss.org.uk, on Flickr"><img alt="Challenges to embedding evidence" height="640" src="http://farm8.staticflickr.com/7170/6437010675_a0b7fabe09_z.jpg" width="428" /></a></p>
+            <p><a href="https://www.flickr.com/photos/openlx/6437010675/" title="Challenges to embedding evidence by iriss.org.uk, on Flickr"><img alt="Challenges to embedding evidence" height="640" src="https://farm8.staticflickr.com/7170/6437010675_a0b7fabe09_z.jpg" width="428" /></a></p>
 <ul>
 <li>
 		Resistance to change</li>
@@ -169,10 +169,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -181,7 +181,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
