--- a/node/13.html
+++ b/node/13.html
@@ -105,11 +105,11 @@
 <p>See also</p>
 <ul>
 <li>
-		Cornwall introduce social media &#39;passport&#39; &nbsp;<a href="http://www.cornwall.gov.uk/default.aspx?page=28872">http://www.cornwall.gov.uk/default.aspx?page=28872</a></li>
+		Cornwall introduce social media &#39;passport&#39; &nbsp;<a href="https://www.cornwall.gov.uk/default.aspx?page=28872">https://www.cornwall.gov.uk/default.aspx?page=28872</a></li>
 <li>
-		Devon County Council. Social Media and Online Participation Policy and Guidelines <a href="http://www.devon.gov.uk/social-media-guidance-user-guidelines.pdf">http://www.devon.gov.uk/social-media-guidance-user-guidelines.pdf</a></li>
+		Devon County Council. Social Media and Online Participation Policy and Guidelines <a href="https://www.devon.gov.uk/social-media-guidance-user-guidelines.pdf">https://www.devon.gov.uk/social-media-guidance-user-guidelines.pdf</a></li>
 <li>
-		Video interview with Carl Haggerty, Devon County Council&rsquo;s Enterprise Architect <a href="http://robgray.org/?p=199">http://robgray.org/?p=199</a>
+		Video interview with Carl Haggerty, Devon County Council&rsquo;s Enterprise Architect <a href="https://robgray.org/?p=199">https://robgray.org/?p=199</a>
 <p>&nbsp;</p>
 </li>
 </ul>
@@ -163,10 +163,10 @@
 			<div id="footer-area">
 				<div id="footer" class="container-16">
 					<div class="grid-12"> 
-<a href="http://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
- <a href="http://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
+<a href="https://www.iriss.org.uk/"><img src="../sites/all/themes/comment/styles/images/logo-iriss-footer.png" alt="IRISS" title="go to the IRISS website" /></a><br /> 
+ <a href="https://www.iriss.org.uk/privacy-policy">IRISS Privacy Policy</a> 
 	<div class="adr"> 
-		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="http://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
+		<span class="street-address">Brunswick House, 51 Wilson Street, <span class="region">Glasgow</span>, <a class="postal-code" href="https://maps.google.co.uk/maps?q=G1+1UZ" title="Google map">G1 1UZ</a></span></div> 
 	<div> 
 		<span class="email">e-mail: <a href="mailto:enquiries@iriss.org.uk">enquiries@iriss.org.uk</a></span></div> 
 </div> 
@@ -175,7 +175,7 @@
 		IRISS Networks</h4> 
 	<ul> 
 		<li id="link-flickr"> 
-			<a href="http://www.flickr.com/photos/openlx/">Flickr</a></li> 
+			<a href="https://www.flickr.com/photos/openlx/">Flickr</a></li> 
 		<li id="link-twitter"> 
 			<a href="https://twitter.com/irissorg">Twitter</a></li> 
 		<li id="link-vimeo"> 
